# sdl-package-demo

./: LICENSE  README.md  pyproject.toml
sdl_example_package/: __init__.py  arithmetic.py  messaging.py
